--- a/실습2 반복문과 조건문.ipynb
+++ b/실습2 반복문과 조건문.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_list = [32100, 32150, 32000, 32500]"
+    "price_list = [100, 150, 200, 250]"
    ]
   },
   {
@@ -284,6 +284,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a291714-adfb-4568-bea0-227cdd1b4346",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "150\n",
+      "200\n",
+      "250\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100,251,50):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "22ccf9f6-1706-46d5-8450-8d6581d4b5cf",
+   "metadata": {},
+   "source": [
+    "a"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6c7de56d",
    "metadata": {},
@@ -294,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "d9c3b927",
    "metadata": {},
    "outputs": [],
@@ -329,16 +359,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f37bd292",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 102] 호\n",
+      "[201, 202] 호\n",
+      "[301, 302] 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in apart: \n",
+    "    print(\"{} 호\".format(i))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
