--- a/실습3 패키지 활용 pandas.ipynb
+++ b/실습3 패키지 활용 pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c943e7f3",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "bd301ca5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "id": "5dc0c73f-f6ac-4097-961d-9984a0e1e83e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법원명</th>\n",
+       "      <th>사건번호</th>\n",
+       "      <th>매각기일</th>\n",
+       "      <th>주소</th>\n",
+       "      <th>감정가</th>\n",
+       "      <th>최저가</th>\n",
+       "      <th>태그</th>\n",
+       "      <th>주거형태</th>\n",
+       "      <th>건물평수</th>\n",
+       "      <th>조회수</th>\n",
+       "      <th>경매/공매</th>\n",
+       "      <th>임대여부</th>\n",
+       "      <th>할인율</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>진주지원</td>\n",
+       "      <td>2021타경1550[1]</td>\n",
+       "      <td>D-57</td>\n",
+       "      <td>경상남도 산청군 산청읍 차탄리 산9</td>\n",
+       "      <td>2049266000</td>\n",
+       "      <td>275048000</td>\n",
+       "      <td>#유찰9회#재매각#분묘기지권#맹지</td>\n",
+       "      <td>임야</td>\n",
+       "      <td>20228</td>\n",
+       "      <td>508</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>서울남부지법</td>\n",
+       "      <td>2022타경156[1]</td>\n",
+       "      <td>D-56</td>\n",
+       "      <td>서울특별시 영등포구 영등포로65길 15-1</td>\n",
+       "      <td>1218785600</td>\n",
+       "      <td>975028000</td>\n",
+       "      <td>#유찰1회</td>\n",
+       "      <td>다가구</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>서울남부지법</td>\n",
+       "      <td>2022타경102168[1]</td>\n",
+       "      <td>D-56</td>\n",
+       "      <td>서울특별시 강서구 공항대로55길 10-3, 제6층 제602호 (등촌동, 워너빌)</td>\n",
+       "      <td>124480000</td>\n",
+       "      <td>40790000</td>\n",
+       "      <td>#유찰5회#선순위임차인#위반건축물#임차권등기</td>\n",
+       "      <td>다세대</td>\n",
+       "      <td>6</td>\n",
+       "      <td>429</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>서울남부지법</td>\n",
+       "      <td>2022타경114307[1]</td>\n",
+       "      <td>D-56</td>\n",
+       "      <td>서울특별시 영등포구 경인로112길 4-7, 제6층 제601호 (영등포동1가, 메트로가든)</td>\n",
+       "      <td>139000000</td>\n",
+       "      <td>111200000</td>\n",
+       "      <td>#유찰1회</td>\n",
+       "      <td>오피스텔(주거)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>344</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>서산지원</td>\n",
+       "      <td>2022타경56959[1]</td>\n",
+       "      <td>D-55</td>\n",
+       "      <td>충청남도 당진시 고대면 용두리 326</td>\n",
+       "      <td>104047980</td>\n",
+       "      <td>35689000</td>\n",
+       "      <td>#유찰3회</td>\n",
+       "      <td>단독주택</td>\n",
+       "      <td>20</td>\n",
+       "      <td>550</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13115</th>\n",
+       "      <td>부산서부지원</td>\n",
+       "      <td>2022타경107563[22]</td>\n",
+       "      <td>결과대기</td>\n",
+       "      <td>부산광역시 사상구 주례로 22, 6층602호 (주례동,베스아이하늘)</td>\n",
+       "      <td>118000000</td>\n",
+       "      <td>118000000</td>\n",
+       "      <td>#신건</td>\n",
+       "      <td>오피스텔(사무)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13116</th>\n",
+       "      <td>부산서부지원</td>\n",
+       "      <td>2022타경107563[23]</td>\n",
+       "      <td>결과대기</td>\n",
+       "      <td>부산광역시 사상구 주례로 22, 6층603호 (주례동,베스아이하늘)</td>\n",
+       "      <td>117000000</td>\n",
+       "      <td>117000000</td>\n",
+       "      <td>#신건</td>\n",
+       "      <td>오피스텔(사무)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13117</th>\n",
+       "      <td>부산서부지원</td>\n",
+       "      <td>2022타경107563[24]</td>\n",
+       "      <td>결과대기</td>\n",
+       "      <td>부산광역시 사상구 주례로 22, 6층604호 (주례동,베스아이하늘)</td>\n",
+       "      <td>109000000</td>\n",
+       "      <td>109000000</td>\n",
+       "      <td>#신건</td>\n",
+       "      <td>오피스텔(사무)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13118</th>\n",
+       "      <td>부산서부지원</td>\n",
+       "      <td>2022타경107563[28]</td>\n",
+       "      <td>결과대기</td>\n",
+       "      <td>부산광역시 사상구 주례로 22, 7층703호 (주례동,베스아이하늘)</td>\n",
+       "      <td>117000000</td>\n",
+       "      <td>117000000</td>\n",
+       "      <td>#신건</td>\n",
+       "      <td>오피스텔(사무)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13119</th>\n",
+       "      <td>부산서부지원</td>\n",
+       "      <td>2022타경107563[32]</td>\n",
+       "      <td>결과대기</td>\n",
+       "      <td>부산광역시 사상구 주례로 22, 8층802호 (주례동,베스아이하늘)</td>\n",
+       "      <td>120000000</td>\n",
+       "      <td>120000000</td>\n",
+       "      <td>#신건</td>\n",
+       "      <td>오피스텔(사무)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>경매</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13120 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          법원명              사건번호  매각기일  \\\n",
+       "0        진주지원     2021타경1550[1]  D-57   \n",
+       "1      서울남부지법      2022타경156[1]  D-56   \n",
+       "2      서울남부지법   2022타경102168[1]  D-56   \n",
+       "3      서울남부지법   2022타경114307[1]  D-56   \n",
+       "4        서산지원    2022타경56959[1]  D-55   \n",
+       "...       ...               ...   ...   \n",
+       "13115  부산서부지원  2022타경107563[22]  결과대기   \n",
+       "13116  부산서부지원  2022타경107563[23]  결과대기   \n",
+       "13117  부산서부지원  2022타경107563[24]  결과대기   \n",
+       "13118  부산서부지원  2022타경107563[28]  결과대기   \n",
+       "13119  부산서부지원  2022타경107563[32]  결과대기   \n",
+       "\n",
+       "                                                      주소         감정가  \\\n",
+       "0                                    경상남도 산청군 산청읍 차탄리 산9  2049266000   \n",
+       "1                                서울특별시 영등포구 영등포로65길 15-1  1218785600   \n",
+       "2           서울특별시 강서구 공항대로55길 10-3, 제6층 제602호 (등촌동, 워너빌)   124480000   \n",
+       "3      서울특별시 영등포구 경인로112길 4-7, 제6층 제601호 (영등포동1가, 메트로가든)   139000000   \n",
+       "4                                   충청남도 당진시 고대면 용두리 326   104047980   \n",
+       "...                                                  ...         ...   \n",
+       "13115              부산광역시 사상구 주례로 22, 6층602호 (주례동,베스아이하늘)   118000000   \n",
+       "13116              부산광역시 사상구 주례로 22, 6층603호 (주례동,베스아이하늘)   117000000   \n",
+       "13117              부산광역시 사상구 주례로 22, 6층604호 (주례동,베스아이하늘)   109000000   \n",
+       "13118              부산광역시 사상구 주례로 22, 7층703호 (주례동,베스아이하늘)   117000000   \n",
+       "13119              부산광역시 사상구 주례로 22, 8층802호 (주례동,베스아이하늘)   120000000   \n",
+       "\n",
+       "             최저가                        태그      주거형태   건물평수   조회수 경매/공매  \\\n",
+       "0      275048000        #유찰9회#재매각#분묘기지권#맹지        임야  20228   508    경매   \n",
+       "1      975028000                     #유찰1회       다가구     73  2600    경매   \n",
+       "2       40790000  #유찰5회#선순위임차인#위반건축물#임차권등기       다세대      6   429    경매   \n",
+       "3      111200000                     #유찰1회  오피스텔(주거)      4   344    경매   \n",
+       "4       35689000                     #유찰3회      단독주택     20   550    경매   \n",
+       "...          ...                       ...       ...    ...   ...   ...   \n",
+       "13115  118000000                       #신건  오피스텔(사무)      7     2    경매   \n",
+       "13116  117000000                       #신건  오피스텔(사무)      7     2    경매   \n",
+       "13117  109000000                       #신건  오피스텔(사무)      7     2    경매   \n",
+       "13118  117000000                       #신건  오피스텔(사무)      7     2    경매   \n",
+       "13119  120000000                       #신건  오피스텔(사무)      7     2    경매   \n",
+       "\n",
+       "        임대여부   할인율  \n",
+       "0      False  0.87  \n",
+       "1      False  0.20  \n",
+       "2      False  0.67  \n",
+       "3      False  0.20  \n",
+       "4      False  0.66  \n",
+       "...      ...   ...  \n",
+       "13115  False  0.00  \n",
+       "13116  False  0.00  \n",
+       "13117  False  0.00  \n",
+       "13118  False  0.00  \n",
+       "13119  False  0.00  \n",
+       "\n",
+       "[13120 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "d8a00e52",
    "metadata": {},
    "outputs": [
@@ -298,7 +587,7 @@
        "[13120 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "0dbad8a1",
    "metadata": {},
    "outputs": [
@@ -335,7 +624,7 @@
        "0.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,10 +652,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b6054d17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 결과 체크\n",
     "sum(df['조회수'] == result['조회수']) / len(df['조회수'])"
@@ -390,10 +690,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e587b39b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 결과 체크\n",
     "sum(df['감정가'] == result['감정가']) / len(df['감정가'])"
@@ -401,10 +712,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dc21e6fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 결과 체크\n",
     "sum(df['최저가'] == result['최저가']) / len(df['최저가'])"
@@ -428,10 +750,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5b5f846b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'할인율'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3621\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3622\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '할인율'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-d52f8d44de9f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 결과 체크\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'할인율'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'할인율'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'할인율'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3504\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3505\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3506\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3507\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3508\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3622\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3623\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3624\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3625\u001b[0m                 \u001b[1;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '할인율'"
+     ]
+    }
+   ],
    "source": [
     "# 결과 체크\n",
     "sum(df['할인율'] == result['할인율']) / len(df['할인율'])"
@@ -440,7 +784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
