--- a/실습4 chemcalcAPI.ipynb
+++ b/실습4 chemcalcAPI.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "0c606900",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "87d809a5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "cc784ec9",
    "metadata": {},
    "outputs": [],
@@ -93,11 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "0e3386e5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -123,7 +121,6 @@
        "      <th>em</th>\n",
        "      <th>mf</th>\n",
        "      <th>unsat</th>\n",
-       "      <th>jcampURL</th>\n",
        "      <th>error</th>\n",
        "      <th>ppm</th>\n",
        "      <th>info</th>\n",
@@ -132,53 +129,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>300.000031</td>\n",
-       "      <td>C10H10Cl2F2NO3(+1)</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/Cl2F2NO3...</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>0.1048</td>\n",
-       "      <td>Cl2F2NO3C10H10(+1)</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>C25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>C25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>299.999959</td>\n",
-       "      <td>C11H2N5O6(+1)</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/N5O6C11H...</td>\n",
-       "      <td>-0.000041</td>\n",
-       "      <td>-0.1359</td>\n",
-       "      <td>N5O6C11H2(+1)</td>\n",
+       "      <td>299.999165</td>\n",
+       "      <td>C9N8O5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-0.000835</td>\n",
+       "      <td>-2.7829</td>\n",
+       "      <td>N8O5C9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>299.999947</td>\n",
-       "      <td>CH18BrCl2FN5O2(+1)</td>\n",
-       "      <td>-6.5</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/BrCl2FN5...</td>\n",
-       "      <td>-0.000053</td>\n",
-       "      <td>-0.1767</td>\n",
-       "      <td>BrCl2FN5O2CH18(+1)</td>\n",
+       "      <td>300.001850</td>\n",
+       "      <td>C13H4N2O7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.001850</td>\n",
+       "      <td>6.1682</td>\n",
+       "      <td>N2O7C13H4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>300.000083</td>\n",
-       "      <td>CH15Cl3N4O7(+1)</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/Cl3N4O7C...</td>\n",
-       "      <td>0.000083</td>\n",
-       "      <td>0.2777</td>\n",
-       "      <td>Cl3N4O7CH15(+1)</td>\n",
+       "      <td>299.997828</td>\n",
+       "      <td>C8H4N4O9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.002172</td>\n",
+       "      <td>-7.2410</td>\n",
+       "      <td>N4O9C8H4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>300.000110</td>\n",
-       "      <td>C3H7BrF2N10(+1)</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/BrF2N10C...</td>\n",
-       "      <td>0.000110</td>\n",
-       "      <td>0.3676</td>\n",
-       "      <td>BrF2N10C3H7(+1)</td>\n",
+       "      <td>300.003188</td>\n",
+       "      <td>C14N6O3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.003188</td>\n",
+       "      <td>10.6262</td>\n",
+       "      <td>N6O3C14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -188,107 +180,75 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>300.017301</td>\n",
-       "      <td>C4H3F3N8O5(+1)</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/F3N8O5C4...</td>\n",
-       "      <td>0.017301</td>\n",
-       "      <td>57.6678</td>\n",
-       "      <td>F3N8O5C4H3(+1)</td>\n",
+       "      <th>162</th>\n",
+       "      <td>300.288912</td>\n",
+       "      <td>C16H36N4O</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.288912</td>\n",
+       "      <td>962.1128</td>\n",
+       "      <td>N4OC16H36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>300.017307</td>\n",
-       "      <td>C5H9F3NO10(+1)</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/F3NO10C5...</td>\n",
-       "      <td>0.017307</td>\n",
-       "      <td>57.6853</td>\n",
-       "      <td>F3NO10C5H9(+1)</td>\n",
+       "      <th>163</th>\n",
+       "      <td>300.300145</td>\n",
+       "      <td>C15H36N6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.300145</td>\n",
+       "      <td>999.4840</td>\n",
+       "      <td>N6C15H36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>300.017333</td>\n",
-       "      <td>C6H9Cl2FN7O2(+1)</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/Cl2FN7O2...</td>\n",
-       "      <td>0.017333</td>\n",
-       "      <td>57.7719</td>\n",
-       "      <td>Cl2FN7O2C6H9(+1)</td>\n",
+       "      <th>164</th>\n",
+       "      <td>300.302831</td>\n",
+       "      <td>C19H40O2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.302831</td>\n",
+       "      <td>1008.4171</td>\n",
+       "      <td>O2C19H40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>300.017338</td>\n",
-       "      <td>C7H15Cl2FO7(+1)</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/Cl2FO7C7...</td>\n",
-       "      <td>0.017338</td>\n",
-       "      <td>57.7894</td>\n",
-       "      <td>Cl2FO7C7H15(+1)</td>\n",
+       "      <th>165</th>\n",
+       "      <td>300.314064</td>\n",
+       "      <td>C18H40N2O</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.314064</td>\n",
+       "      <td>1045.7849</td>\n",
+       "      <td>N2OC18H40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>299.982585</td>\n",
-       "      <td>C2H130FNO7(+1)</td>\n",
-       "      <td>-62.0</td>\n",
-       "      <td>http://www.chemcalc.org/service/jcamp/FNO7C2H1...</td>\n",
-       "      <td>-0.017415</td>\n",
-       "      <td>-58.0528</td>\n",
-       "      <td>FNO7C2H130(+1)</td>\n",
+       "      <th>166</th>\n",
+       "      <td>300.325297</td>\n",
+       "      <td>C17H40N4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.325297</td>\n",
+       "      <td>1083.1499</td>\n",
+       "      <td>N4C17H40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 7 columns</p>\n",
+       "<p>167 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             em                  mf  unsat  \\\n",
-       "0    300.000031  C10H10Cl2F2NO3(+1)    4.5   \n",
-       "1    299.999959       C11H2N5O6(+1)   13.5   \n",
-       "2    299.999947  CH18BrCl2FN5O2(+1)   -6.5   \n",
-       "3    300.000083     CH15Cl3N4O7(+1)   -5.0   \n",
-       "4    300.000110     C3H7BrF2N10(+1)    4.0   \n",
-       "..          ...                 ...    ...   \n",
-       "995  300.017301      C4H3F3N8O5(+1)    6.0   \n",
-       "996  300.017307      C5H9F3NO10(+1)    0.5   \n",
-       "997  300.017333    C6H9Cl2FN7O2(+1)    4.5   \n",
-       "998  300.017338     C7H15Cl2FO7(+1)   -1.0   \n",
-       "999  299.982585      C2H130FNO7(+1)  -62.0   \n",
+       "             em         mf  unsat     error        ppm       info\n",
+       "0    300.000000        C25     26  0.000000     0.0000        C25\n",
+       "1    299.999165     C9N8O5     14 -0.000835    -2.7829     N8O5C9\n",
+       "2    300.001850  C13H4N2O7     13  0.001850     6.1682  N2O7C13H4\n",
+       "3    299.997828   C8H4N4O9      9 -0.002172    -7.2410   N4O9C8H4\n",
+       "4    300.003188    C14N6O3     18  0.003188    10.6262    N6O3C14\n",
+       "..          ...        ...    ...       ...        ...        ...\n",
+       "162  300.288912  C16H36N4O      1  0.288912   962.1128  N4OC16H36\n",
+       "163  300.300145   C15H36N6      1  0.300145   999.4840   N6C15H36\n",
+       "164  300.302831   C19H40O2      0  0.302831  1008.4171   O2C19H40\n",
+       "165  300.314064  C18H40N2O      0  0.314064  1045.7849  N2OC18H40\n",
+       "166  300.325297   C17H40N4      0  0.325297  1083.1499   N4C17H40\n",
        "\n",
-       "                                              jcampURL     error      ppm  \\\n",
-       "0    http://www.chemcalc.org/service/jcamp/Cl2F2NO3...  0.000031   0.1048   \n",
-       "1    http://www.chemcalc.org/service/jcamp/N5O6C11H... -0.000041  -0.1359   \n",
-       "2    http://www.chemcalc.org/service/jcamp/BrCl2FN5... -0.000053  -0.1767   \n",
-       "3    http://www.chemcalc.org/service/jcamp/Cl3N4O7C...  0.000083   0.2777   \n",
-       "4    http://www.chemcalc.org/service/jcamp/BrF2N10C...  0.000110   0.3676   \n",
-       "..                                                 ...       ...      ...   \n",
-       "995  http://www.chemcalc.org/service/jcamp/F3N8O5C4...  0.017301  57.6678   \n",
-       "996  http://www.chemcalc.org/service/jcamp/F3NO10C5...  0.017307  57.6853   \n",
-       "997  http://www.chemcalc.org/service/jcamp/Cl2FN7O2...  0.017333  57.7719   \n",
-       "998  http://www.chemcalc.org/service/jcamp/Cl2FO7C7...  0.017338  57.7894   \n",
-       "999  http://www.chemcalc.org/service/jcamp/FNO7C2H1... -0.017415 -58.0528   \n",
-       "\n",
-       "                   info  \n",
-       "0    Cl2F2NO3C10H10(+1)  \n",
-       "1         N5O6C11H2(+1)  \n",
-       "2    BrCl2FN5O2CH18(+1)  \n",
-       "3       Cl3N4O7CH15(+1)  \n",
-       "4       BrF2N10C3H7(+1)  \n",
-       "..                  ...  \n",
-       "995      F3N8O5C4H3(+1)  \n",
-       "996      F3NO10C5H9(+1)  \n",
-       "997    Cl2FN7O2C6H9(+1)  \n",
-       "998     Cl2FO7C7H15(+1)  \n",
-       "999      FNO7C2H130(+1)  \n",
-       "\n",
-       "[1000 rows x 7 columns]"
+       "[167 rows x 6 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "7103423a",
    "metadata": {},
    "outputs": [],
@@ -318,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "6060109d",
    "metadata": {},
    "outputs": [],
@@ -349,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "c9cd7eae",
    "metadata": {},
    "outputs": [
@@ -7376,7 +7336,7 @@
        "   'info': 'FNO7C2H130(+1)'}]}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7387,7 +7347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "4bbdfbd6",
    "metadata": {},
    "outputs": [
@@ -9563,7 +9523,7 @@
        "   'info': 'NC2H62(+1)'}]}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9583,7 +9543,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
