--- a/02. 반복문과 조건문.ipynb
+++ b/02. 반복문과 조건문.ipynb
@@ -328,9 +328,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "d4629afc",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -629,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
