--- a/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
+++ b/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 1,
    "id": "d0511f73",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 2,
    "id": "24c293a1",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "id": "3a7a4702",
    "metadata": {
     "scrolled": true
@@ -341,7 +341,7 @@
        "[2661 rows x 16 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "id": "e648d59c",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "id": "2122324e",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 6,
    "id": "05c75d17",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "id": "5ee7a066",
    "metadata": {
     "scrolled": false
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 8,
    "id": "aeffb8af",
    "metadata": {},
    "outputs": [],
@@ -420,17 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "c0188ce0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.iloc[:10,:] # 10개만 test로 해보기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "id": "52b688b7",
    "metadata": {},
    "outputs": [
@@ -510,69 +500,95 @@
        "      <td>0.0052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>89.9639</td>\n",
-       "      <td>16388</td>\n",
-       "      <td>25</td>\n",
-       "      <td>979</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0055</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>90.055</td>\n",
-       "      <td>16786</td>\n",
-       "      <td>3077.1</td>\n",
-       "      <td>120565</td>\n",
-       "      <td>58.7</td>\n",
-       "      <td>0.0054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>90.0913</td>\n",
-       "      <td>16209</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>257</td>\n",
+       "      <th>2656</th>\n",
+       "      <td>1001.8604</td>\n",
+       "      <td>15828</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>227</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>0.0056</td>\n",
+       "      <td>0.0633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>91.058</td>\n",
-       "      <td>15047</td>\n",
-       "      <td>114.3</td>\n",
-       "      <td>4490</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>0.0061</td>\n",
+       "      <th>2657</th>\n",
+       "      <td>1002.8672</td>\n",
+       "      <td>16946</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>310</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>92.0606</td>\n",
-       "      <td>16235</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>584</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.0057</td>\n",
+       "      <th>2658</th>\n",
+       "      <td>1003.8993</td>\n",
+       "      <td>16053</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>290</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2659</th>\n",
+       "      <td>354.1386+'[Sorting_0529_Fe Complexes .xlsx]#4 ...</td>\n",
+       "      <td>12797</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>2249</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.0277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2660</th>\n",
+       "      <td>m/z</td>\n",
+       "      <td>Res.</td>\n",
+       "      <td>S/N</td>\n",
+       "      <td>I</td>\n",
+       "      <td>I %</td>\n",
+       "      <td>FWHM</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2656 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      var1   var2    var3    var4  var5    var6\n",
-       "0  85.1014  16848    16.6     643   0.3  0.0051\n",
-       "1  86.0599  15149    19.4     753   0.4  0.0057\n",
-       "2  87.0438  18891      17     663   0.3  0.0046\n",
-       "3  88.0755  15455    55.3    2156   1.1  0.0057\n",
-       "4  89.0593  17062     5.5     215   0.1  0.0052\n",
-       "5  89.9639  16388      25     979   0.5  0.0055\n",
-       "6   90.055  16786  3077.1  120565  58.7  0.0054\n",
-       "7  90.0913  16209     6.6     257   0.1  0.0056\n",
-       "8   91.058  15047   114.3    4490   2.2  0.0061\n",
-       "9  92.0606  16235    14.8     584   0.3  0.0057"
+       "                                                   var1   var2  var3  var4  \\\n",
+       "0                                               85.1014  16848  16.6   643   \n",
+       "1                                               86.0599  15149  19.4   753   \n",
+       "2                                               87.0438  18891    17   663   \n",
+       "3                                               88.0755  15455  55.3  2156   \n",
+       "4                                               89.0593  17062   5.5   215   \n",
+       "...                                                 ...    ...   ...   ...   \n",
+       "2656                                          1001.8604  15828   1.8   227   \n",
+       "2657                                          1002.8672  16946   2.5   310   \n",
+       "2658                                          1003.8993  16053   2.3   290   \n",
+       "2659  354.1386+'[Sorting_0529_Fe Complexes .xlsx]#4 ...  12797  27.1  2249   \n",
+       "2660                                                m/z   Res.   S/N     I   \n",
+       "\n",
+       "     var5    var6  \n",
+       "0     0.3  0.0051  \n",
+       "1     0.4  0.0057  \n",
+       "2     0.3  0.0046  \n",
+       "3     1.1  0.0057  \n",
+       "4     0.1  0.0052  \n",
+       "...   ...     ...  \n",
+       "2656  0.1  0.0633  \n",
+       "2657  0.2  0.0592  \n",
+       "2658  0.1  0.0625  \n",
+       "2659  1.1  0.0277  \n",
+       "2660  I %    FWHM  \n",
+       "\n",
+       "[2656 rows x 6 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "id": "291d405a",
    "metadata": {},
    "outputs": [],
@@ -603,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "id": "a715c928",
    "metadata": {},
    "outputs": [],
@@ -621,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "id": "56149f93",
    "metadata": {},
    "outputs": [],
@@ -631,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "id": "4a3bb1cb",
    "metadata": {},
    "outputs": [],
@@ -641,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "id": "17ab4d83",
    "metadata": {},
    "outputs": [
@@ -651,7 +667,7 @@
        "'C3H3NO2'"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,17 +682,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 15,
    "id": "10f0a4b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "85.1014"
+       "array([85.1014, 86.0599, 87.0438, ..., 1003.8993,\n",
+       "       \"354.1386+'[Sorting_0529_Fe Complexes .xlsx]#4 Ala2+Fe+Glu2'!$B$48:$G$692+'[Sorting_0529_Fe Complexes .xlsx]#4 Ala2+Fe+Glu2'!$B$126:$G$692\",\n",
+       "       'm/z'], dtype=object)"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,13 +705,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "2d740a08",
+   "execution_count": 18,
+   "id": "a50c8096",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a419a2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>var1</th>\n",
+       "      <th>var2</th>\n",
+       "      <th>var3</th>\n",
+       "      <th>var4</th>\n",
+       "      <th>var5</th>\n",
+       "      <th>var6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>85.1014</td>\n",
+       "      <td>16848</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>643</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>86.0599</td>\n",
+       "      <td>15149</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>753</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87.0438</td>\n",
+       "      <td>18891</td>\n",
+       "      <td>17</td>\n",
+       "      <td>663</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88.0755</td>\n",
+       "      <td>15455</td>\n",
+       "      <td>55.3</td>\n",
+       "      <td>2156</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.0057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>89.0593</td>\n",
+       "      <td>17062</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>215</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2656</th>\n",
+       "      <td>1001.8604</td>\n",
+       "      <td>15828</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>227</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2657</th>\n",
+       "      <td>1002.8672</td>\n",
+       "      <td>16946</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>310</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2658</th>\n",
+       "      <td>1003.8993</td>\n",
+       "      <td>16053</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>290</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2659</th>\n",
+       "      <td>354.1386+'[Sorting_0529_Fe Complexes .xlsx]#4 ...</td>\n",
+       "      <td>12797</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>2249</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.0277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2660</th>\n",
+       "      <td>m/z</td>\n",
+       "      <td>Res.</td>\n",
+       "      <td>S/N</td>\n",
+       "      <td>I</td>\n",
+       "      <td>I %</td>\n",
+       "      <td>FWHM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2656 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   var1   var2  var3  var4  \\\n",
+       "0                                               85.1014  16848  16.6   643   \n",
+       "1                                               86.0599  15149  19.4   753   \n",
+       "2                                               87.0438  18891    17   663   \n",
+       "3                                               88.0755  15455  55.3  2156   \n",
+       "4                                               89.0593  17062   5.5   215   \n",
+       "...                                                 ...    ...   ...   ...   \n",
+       "2656                                          1001.8604  15828   1.8   227   \n",
+       "2657                                          1002.8672  16946   2.5   310   \n",
+       "2658                                          1003.8993  16053   2.3   290   \n",
+       "2659  354.1386+'[Sorting_0529_Fe Complexes .xlsx]#4 ...  12797  27.1  2249   \n",
+       "2660                                                m/z   Res.   S/N     I   \n",
+       "\n",
+       "     var5    var6  \n",
+       "0     0.3  0.0051  \n",
+       "1     0.4  0.0057  \n",
+       "2     0.3  0.0046  \n",
+       "3     1.1  0.0057  \n",
+       "4     0.1  0.0052  \n",
+       "...   ...     ...  \n",
+       "2656  0.1  0.0633  \n",
+       "2657  0.2  0.0592  \n",
+       "2658  0.1  0.0625  \n",
+       "2659  1.1  0.0277  \n",
+       "2660  I %    FWHM  \n",
+       "\n",
+       "[2656 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d740a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 51%|███████████████████████████████████████▌                                      | 1349/2656 [31:43<33:27,  1.54s/it]"
+     ]
+    }
+   ],
+   "source": [
     "mf_list = []\n",
-    "for var1 in df['var1'].values:\n",
+    "for var1 in tqdm(df['var1'].values):\n",
     "    data = findMfByMass(var1)\n",
     "    data = pd.DataFrame(data['results'])\n",
     "    data = data.sort_values(by = 'error',ascending= True) # 에러가 가장 작은 분자구조를 선택해보쟈\n",
@@ -761,7 +976,7 @@
    "execution_count": 213,
    "id": "cbbf9f7a",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -920,6 +1135,16 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b717cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Example 3.csv',index = False)"
    ]
   },
   {
