--- a/06. 패키지 활용 pyKrev.ipynb
+++ b/06. 패키지 활용 pyKrev.ipynb
@@ -131,9 +131,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "006e57c5",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -182,9 +180,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "8ffa842d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -316,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
